crates/velme-cli/tests/snapshots/check__ac_cli_01_parse_part_syntax_error_exits_1_with_a_caret.snap
---
source: crates/velme-cli/tests/check.rs
expression: run.stderr
---
Error: Please indent with spaces, not tabs.  [VL0103]
   ╭─[ tab_then_errors.velme:3:1 ]
   │
 3 │     x: Number
   │ ┬───  
   │ ╰───── here
   │ 
   │ Help: replace the tab with spaces
───╯
Error: I didn't expect `Number` here — I was looking for `:`.  [VL0101]
   ╭─[ tab_then_errors.velme:6:7 ]
   │
 6 │     y Number
   │       ───┬──  
   │          ╰──── here
───╯
