crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@boolean_operators_dangling.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/parser/reject/boolean_operators_dangling.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "boolean_operators_dangling.velme",
      "labels": [],
      "message": "I didn't expect the end of the line here — I was looking for an expression.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 15,
        "end": 143,
        "line": 5,
        "start": 143
      }
    },
    {
      "code": "VL0101",
      "file": "boolean_operators_dangling.velme",
      "labels": [],
      "message": "I didn't expect the end of the line here — I was looking for an expression.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 16,
        "end": 159,
        "line": 6,
        "start": 159
      }
    },
    {
      "code": "VL0101",
      "file": "boolean_operators_dangling.velme",
      "labels": [],
      "message": "I didn't expect the end of the line here — I was looking for an expression.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 14,
        "end": 173,
        "line": 7,
        "start": 173
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
