crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@budget_item_unit_elsewhere.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: json
input_file: tests/golden/parser/reject/budget_item_unit_elsewhere.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "tests/golden/parser/reject/budget_item_unit_elsewhere.velme",
      "labels": [],
      "message": "I didn't expect the end of the line here — I was looking for `=`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 22,
        "end": 136,
        "line": 4,
        "start": 136
      }
    },
    {
      "code": "VL0101",
      "file": "tests/golden/parser/reject/budget_item_unit_elsewhere.velme",
      "labels": [],
      "message": "I didn't expect `s` here — I was looking for `.`, `and`, `is`, `or` or the end of the line.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 21,
        "end": 183,
        "line": 7,
        "start": 182
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
