crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@budgets.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/sema/reject/budgets.velme
---
{
  "diagnostics": [
    {
      "code": "VL0308",
      "file": "budgets.velme",
      "labels": [],
      "message": "`cpu` is written as a whole number, without a `.`",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 12,
        "end": 268,
        "line": 9,
        "start": 259
      }
    },
    {
      "code": "VL0308",
      "file": "budgets.velme",
      "help": "keep one of them",
      "labels": [],
      "message": "`cpu` is already set on this line.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 22,
        "end": 277,
        "line": 9,
        "start": 269
      }
    },
    {
      "code": "VL0308",
      "file": "budgets.velme",
      "labels": [],
      "message": "`budget` can only make limits smaller — `calls` can be at most `128`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 31,
        "end": 287,
        "line": 9,
        "start": 278
      }
    },
    {
      "code": "VL0308",
      "file": "budgets.velme",
      "labels": [],
      "message": "`budget` can only make limits smaller — `memory` can be at most `64mb`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 41,
        "end": 299,
        "line": 9,
        "start": 288
      }
    },
    {
      "code": "VL0308",
      "file": "budgets.velme",
      "labels": [],
      "message": "`depth` must be more than 0.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 53,
        "end": 307,
        "line": 9,
        "start": 300
      }
    },
    {
      "code": "VL0308",
      "file": "budgets.velme",
      "help": "a budget can set `cpu`, `memory`, `calls` and `depth`",
      "labels": [],
      "message": "A budget has no limit called `time`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 61,
        "end": 312,
        "line": 9,
        "start": 308
      }
    },
    {
      "code": "VL0308",
      "file": "budgets.velme",
      "labels": [],
      "message": "`cpu` is a time in whole milliseconds, like `cpu=10ms`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 12,
        "end": 389,
        "line": 13,
        "start": 382
      }
    },
    {
      "code": "VL0308",
      "file": "budgets.velme",
      "labels": [],
      "message": "`memory` is a size in `kb` or `mb`, like `memory=4mb`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 20,
        "end": 398,
        "line": 13,
        "start": 390
      }
    },
    {
      "code": "VL0308",
      "file": "budgets.velme",
      "labels": [],
      "message": "`calls` is a count, so it has no unit, like `calls=16`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 29,
        "end": 408,
        "line": 13,
        "start": 399
      }
    },
    {
      "code": "VL0308",
      "file": "budgets.velme",
      "labels": [],
      "message": "`depth` is written as a whole number, without a `.`",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 39,
        "end": 418,
        "line": 13,
        "start": 409
      }
    },
    {
      "code": "VL0308",
      "file": "budgets.velme",
      "labels": [],
      "message": "`cpu` is written as a whole number, without a `.`",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 12,
        "end": 500,
        "line": 17,
        "start": 490
      }
    },
    {
      "code": "VL0308",
      "file": "budgets.velme",
      "help": "write `memory=1536kb`",
      "labels": [],
      "message": "`memory` is written as a whole number, without a `.`",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 23,
        "end": 513,
        "line": 17,
        "start": 501
      }
    },
    {
      "code": "VL0605",
      "file": "budgets.velme",
      "help": "raise `calls=` in its budget, or call fewer goals below it — every call counts, even of the same goal",
      "labels": [
        {
          "span": {
            "column": 12,
            "end": 586,
            "line": 21,
            "start": 579
          },
          "text": "the limit set here"
        }
      ],
      "message": "Too many goals were called while running `Two`.",
      "notes": [
        "it would run 3 goals, counting itself, but its limit is 2"
      ],
      "severity": "error",
      "span": {
        "column": 6,
        "end": 545,
        "line": 20,
        "start": 542
      }
    },
    {
      "code": "VL0605",
      "file": "budgets.velme",
      "help": "raise `depth=` in its budget, or make its chains of calls shorter",
      "labels": [
        {
          "span": {
            "column": 12,
            "end": 721,
            "line": 28,
            "start": 714
          },
          "text": "the limit set here"
        }
      ],
      "message": "Goals call each other too deeply while running `Deep`.",
      "notes": [
        "its calls would nest 2 deep, but its limit is 1"
      ],
      "severity": "error",
      "span": {
        "column": 6,
        "end": 680,
        "line": 27,
        "start": 676
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
