crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@builtin_named_declaration.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/sema/reject/builtin_named_declaration.velme
---
{
  "diagnostics": [
    {
      "code": "VL0107",
      "file": "builtin_named_declaration.velme",
      "help": "type names use PascalCase",
      "labels": [],
      "message": "`range` works, but Velme style writes it `Range`.",
      "notes": [],
      "severity": "warning",
      "span": {
        "column": 6,
        "end": 129,
        "line": 2,
        "start": 124
      }
    },
    {
      "code": "VL0107",
      "file": "builtin_named_declaration.velme",
      "help": "goal names use PascalCase",
      "labels": [],
      "message": "`sum` works, but Velme style writes it `Sum`.",
      "notes": [],
      "severity": "warning",
      "span": {
        "column": 6,
        "end": 156,
        "line": 5,
        "start": 153
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "ok"
}
