crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@call_arg_result.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/parser/reject/call_arg_result.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "call_arg_result.velme",
      "help": "`result` doesn't exist yet while the calls run — pass a parameter or an earlier binding",
      "labels": [],
      "message": "`result` can only name the last binding.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 19,
        "end": 344,
        "line": 7,
        "start": 338
      }
    },
    {
      "code": "VL0101",
      "file": "call_arg_result.velme",
      "help": "`result` doesn't exist yet while the calls run — pass a parameter or an earlier binding",
      "labels": [],
      "message": "`result` can only name the last binding.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 19,
        "end": 370,
        "line": 8,
        "start": 364
      }
    },
    {
      "code": "VL0101",
      "file": "call_arg_result.velme",
      "labels": [],
      "message": "I didn't expect `q` here — I was looking for `)`, `,` or `.`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 27,
        "end": 409,
        "line": 9,
        "start": 408
      }
    },
    {
      "code": "VL0101",
      "file": "call_arg_result.velme",
      "labels": [],
      "message": "I didn't expect `)` here — I was looking for a name.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 21,
        "end": 432,
        "line": 10,
        "start": 431
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
