crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@call_block_result_not_last.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/parser/reject/call_block_result_not_last.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "call_block_result_not_last.velme",
      "help": "rename this binding, or move it to the end of `call:`",
      "labels": [],
      "message": "`result` can only name the last binding.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 9,
        "end": 170,
        "line": 5,
        "start": 164
      }
    },
    {
      "code": "VL0101",
      "file": "call_block_result_not_last.velme",
      "labels": [],
      "message": "I didn't expect `Score` here — I was looking for `=`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 15,
        "end": 266,
        "line": 10,
        "start": 261
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
